; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plpgsql/src/extr_pl_comp.c_plpgsql_compile_error_callback.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plpgsql/src/extr_pl_comp.c_plpgsql_compile_error_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@plpgsql_error_funcname = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [51 x i8] c"compilation of PL/pgSQL function \22%s\22 near line %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @plpgsql_compile_error_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @plpgsql_compile_error_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @function_parse_error_transpose(i8* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  br label %18

10:                                               ; preds = %5
  br label %11

11:                                               ; preds = %10, %1
  %12 = load i64, i64* @plpgsql_error_funcname, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i64, i64* @plpgsql_error_funcname, align 8
  %16 = call i32 (...) @plpgsql_latest_lineno()
  %17 = call i32 @errcontext(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i64 %15, i32 %16)
  br label %18

18:                                               ; preds = %9, %14, %11
  ret void
}

declare dso_local i64 @function_parse_error_transpose(i8*) #1

declare dso_local i32 @errcontext(i8*, i64, i32) #1

declare dso_local i32 @plpgsql_latest_lineno(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
